Fixing spacing in search results

--- a/assets/styles/src/templates/_page.scss
+++ b/assets/styles/src/templates/_page.scss
@@ -27,7 +27,7 @@
 .search-results {
 	.page {
 		.article__content {
-		min-height: 450px;
+		min-height: 0px;
 		}
 	}
 }
